Pantalla principal(Main) completada. También se ha completado la primera activity de números primos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,30 @@
     <string name="name_activity2">Juego de aciertos</string>
     <string name="name_activity3">Desplazando imágenes</string>
     <string name="name_activity4">Seleccionando imágenes</string>
+    <string name="tv_act1">¿Es un número primo?</string>
+    <string name="btn_calcular_act1">Calcular</string>
+    <string name="hint_et_act1">Introduzca un número</string>
+    <string name="num_primo">ES UN NÚMERO PRIMO</string>
+    <string name="num_no_primo">NO ES UN NÚMERO PRIMO</string>
+    <string name="toast_campos_vacios">Error, complete los campos</string>
+    <string name="pais1">ESPAÑA</string>
+    <string name="pais2">FRANCIA</string>
+    <string name="pais3">PORTUGAL</string>
+    <string name="pais4">ITALIA</string>
+    <string name="pais5">ALEMANIA</string>
+    <string name="pais6">BAHAMAS</string>
+    <string name="pais7">BULGARIA</string>
+    <string name="pais8">ESTONIA</string>
+    <string name="pais9">JORNDANIA</string>
+    <string name="pais10">LIBIA</string>
+    <string name="capital1">MADRID</string>
+    <string name="capital2">PARÍS</string>
+    <string name="capital3">LISBOA</string>
+    <string name="capital4">ROMA</string>
+    <string name="capital5">BERLÍN</string>
+    <string name="capital6">NASÁU</string>
+    <string name="capital7">SOFÍA</string>
+    <string name="capital8">TALLÍN</string>
+    <string name="capital9">AMÁN</string>
+    <string name="capital10">TRÍPOLI</string>
 </resources>
