--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="capital8">TALLÍN</string>
     <string name="capital9">AMÁN</string>
     <string name="capital10">TRÍPOLI</string>
+    <string name="btn_verificar_act2">VERIFICAR</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
